--- a/admin/package.json
+++ b/admin/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "mongoose": "^6.2.10",
+    "nodemailer": "^6.7.4",
     "nodemon": "^2.0.15"
   }
 }
