--- a/admin/package.json
+++ b/admin/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "bootstrap": "^5.1.3",
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "express-session": "^1.17.3",
     "mongoose": "^6.2.10",
     "nodemon": "^2.0.15"
   }
